# FastLIO-ROS2-Simulation

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml  localization.yaml
include/: lidar_localization_component.hpp
launch/: display_map_launch.py  lidar_localization_launch.py  one_robot_ign_launch.py
rviz/: ackermann.rviz  akermann.rviz  display_map.rviz  localization.rviz  simulation.rviz
src/: lidar_imu_sync.cpp  lidar_localization_component.cpp  lidar_localization_node.cpp  pc2_to_xyzi.cpp  pcd_visualizer.cpp  tf_broadcaster.cpp
urdf/: ackermann.xacro  sensors_diffbot.xacro
worlds/: depot.sdf
